public interface ImageFilter {
    void apply(String image);
}
